more exaustif tests and users test